Bug 1527482 - Check for BigInts in ValueToSourceForError r=arai

Differential Revision: https://phabricator.services.mozilla.com/D19590

--HG--
extra : moz-landing-system : lando